--- a/index.html
+++ b/index.html
@@ -277,11 +277,11 @@
                     </ul>
                     <a href="" class="btn btn-primary mt-3 py-2 px-4">View More</a>
                 </div>
-                <div class="col-lg-2">
+                {% comment %} <div class="col-lg-2">
                     <div class="d-flex flex-column align-items-center justify-content-center h-75 overflow-hidden">
                         <img class="h-50 img-fluid" height="200px" src="img/truck2.jpg" alt="">
                     </div>
-                </div>
+                </div> {% endcomment %}
             </div>
         </div>
     </div>
