--- a/about.html
+++ b/about.html
@@ -176,11 +176,11 @@
                     </ul>
                     <a href="" class="btn btn-primary mt-3 py-2 px-4">View More</a>
                 </div>
-                {% comment %} <div class="col-lg-5">
+                <div class="col-lg-5">
                     <div class="d-flex flex-column align-items-center justify-content-center h-100 overflow-hidden">
                         <img class="h-100 img-fluid" height="200px" src="img/truck2.jpg" alt="">
                     </div>
-                </div> {% endcomment %}
+                </div>
             </div>
         </div>
     </div>
