--- a/index.html
+++ b/index.html
@@ -277,11 +277,11 @@
                     </ul>
                     <a href="" class="btn btn-primary mt-3 py-2 px-4">View More</a>
                 </div>
-                {% comment %} <div class="col-lg-2">
-                    <div class="d-flex flex-column align-items-center justify-content-center h-75 overflow-hidden">
-                        <img class="h-50 img-fluid" height="200px" src="img/truck2.jpg" alt="">
+                <div class="col-lg-5">
+                    <div class="d-flex flex-column align-items-center justify-content-center h-100 overflow-hidden">
+                        <img class="h-100 img-fluid" height="200px" src="img/truck2.jpg" alt="">
                     </div>
-                </div> {% endcomment %}
+                </div>
             </div>
         </div>
     </div>
@@ -530,7 +530,7 @@
                 </div>
                 <div class="col-md-5 p-4">
                     <div class="d-flex flex-column align-items-center justify-content-center h-100 overflow-hidden">
-                        <img class="h-100 img-fluid" src="img/truck2.jpg" alt="">
+                        <img class="h-50 img-fluid" src="img/truck2.jpg" alt="">
                     </div>
                 </div>
             </div>
